--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -59,11 +59,11 @@
 <!--BLOQUE FORM CONTACTO ---------------------------->
     <form id='formC' action="" method="post">
 
-         <label id='dataLabel' for="name">NOMBRE </label>
+         <label id='dataLabel' for="name">NOMBRE TUTOR </label>
          
         	    <input type="text" name="consulta" id="name"
-                 maxlength=15         
-                 minlength=3 
+                 maxlength='15'         
+                 min='3 '
                   placeholder=" aquí tu nombre" 
                  autocomplete="off" 
                  pattern="[A-Z a-z]+"
