--- a/css/estilos_alumno.css
+++ b/css/estilos_alumno.css
@@ -1,4 +1,141 @@
-@media ( min-width : 1024px) {
+@media (min-width: 1024px) {
+
+    /* Estilo general para el body */
+    body {
+        background: rgb(32, 240, 230);
+        font-family: 'Montserrat', sans-serif;
+        letter-spacing: 3px;
+        margin: 0;
+        justify-items: center;
+        align-items: center;
+    }
+
+    /* HEADER */
+    .header {
+        position: relative;
+        width: 100%;
+        text-align: center;
+        background-color: antiquewhite;
+        padding: 20px;
+    }
+    .header h1 {
+        margin: 0;
+        font-size: 50px;
+        letter-spacing: 5px;
+        width: 100%;
+    }
+
+    /* Botón de cerrar sesión */
+    #exit {
+        width: 110px;
+        height: 100px;
+        position: absolute;
+        right: 100px;
+        top: -0px;
+        background-color: transparent;
+        border: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+    #exit img {
+        width: 95%;
+        object-fit: contain;
+        transition: transform 0.5s;
+    }
+    #exit img:hover {
+        transform: scale(1.3);
+    }
+
+    /* Botón de contacto */
+    #goContacto {
+        width: 110px;
+        height: 150px;
+        position: absolute;
+        left: 100px;
+        top: -25px;
+        background-color: transparent;
+        border: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        overflow: hidden;
+        transition: transform 0.5s;
+    }
+    #goContacto img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+    #goContacto:hover {
+        transform: scale(1.3);
+    }
+
+    /* Título */
+    h3 {
+        position: relative;
+        margin-top: 70px;
+        font-size: 30px;
+    }
+
+    /* Formulario */
+    #form {
+        position: relative;
+        width: 500px;
+        border-radius: 20px;
+        font-size: 28px;
+        font-weight: bold;
+        background-color: rgba(246, 196, 34, 0.982);
+        padding: 10px;
+        box-sizing: border-box;
+        align-items: center;
+    }
+
+    /* Opciones del formulario */
+    .option {
+        align-items: initial;
+        margin-bottom: 20px;
+        justify-items: center;
+    }
+
+    /* Estilo de botones */
+    .option button {
+        align-items: center;
+        background: none;
+        border: none;
+        cursor: pointer;
+        font-size: 28px;
+        font-weight: bold;
+        color: inherit;
+        padding: 10px;
+        margin: 10px 40px;
+        justify-items: center;
+    }
+
+    .option button img {
+        cursor: pointer;
+        margin-right: 320px;
+        margin-top: 20px;
+        width: 60px;
+        height: 60px;
+        transition: transform 0.3s;
+    }
+    .option button img:hover {
+        transform: scale(1.2);
+    }
+
+    label:hover {
+        color: #ffffff;
+        background-color: #ff8000;
+        transform: scale(1.1);
+    }
+}
+/****************************************************************/
+
+/* Media para tablets entre 768px y 1023px */
+@media ( min-width : 768px) and (max-width: 1023px) and (orientation: portrait) {
 	body {
 		background: rgb(32, 240, 230);
 		font-family: 'Montserrat', sans-serif;
@@ -13,25 +150,23 @@
 	.header {
 		position: relative;
 		width: 100%;
-		text-align: center;
-		margin-top: 30px;
+		margin-top: 50px;
 		background-color: antiquewhite;
 		padding: 20px;
 	}
 	.header h1 {
-		margin: 0;
-		font-size: 50px;
+		margin-left: 23vw;
+		font-size: 25px;
 		letter-spacing: 5px;
 		width: 100%;
 	}
 
 	/*** BOTON EXIT *******************************/
 	#exit {
-		width: 110px;
-		height: 100px;
+		width: 85px;
 		position: absolute;
-		right: 100px;
-		top: -0px;
+		right: 180px;
+		top: 12px;
 		background-color: transparent;
 		border: none;
 		display: flex;
@@ -40,7 +175,7 @@
 		cursor: pointer;
 	}
 	#exit img {
-		width: 95%;
+		width: 100%;
 		object-fit: contain;
 		transition: transform 0.5s;
 	}
@@ -49,11 +184,11 @@
 	}
 	/*** BOTON CONTACTO *******************************/
 	#goContacto {
-		width: 110px;
+		width: 90px;
 		height: 150px;
 		position: absolute;
-		left: 100px;
-		top: -25px;
+		left: 50px;
+		top: -28px;
 		background-color: transparent;
 		border: none;
 		display: flex;
@@ -64,26 +199,28 @@
 		transition: transform 0.5s;
 	}
 	#goContacto img {
-		width: 100%; 
-		height: 100%; 
+		width: 100%;
+		height: 100%;
 		object-fit: contain;
 	}
 	#goContacto:hover {
 		transform: scale(1.3);
 	}
 	h3 {
-		position: relative;
-		margin-top: 70px;
-		font-size: 30px;
+		position: absolute;
+		margin-top: 30vw;
+		font-size: 22px;
+				margin-right: 10vh;
+		
 	}
 	/*** MENU-FORMULARIO *******************************/
 	#form {
 		position: absolute;
-		width: 500px;
-		margin-top: 290px;
-		left: 530px;
+		width: 400px;
+	top: 35vh;
+		left:18vw;
 		border-radius: 20px;
-		font-size: 28px;
+		font-size: 24px;
 		font-weight: bold;
 		background-color: rgba(246, 196, 34, 0.982);
 		padding: 20px;
@@ -117,8 +254,8 @@
 		cursor: pointer;
 		margin-right: 20px;
 		margin-top: 20px;
-		width: 60px;
-		height: 60px;
+		width: 50px;
+		height: 50px;
 		transition: transform 0.3s;
 	}
 	.option button img:hover {
@@ -129,16 +266,18 @@
 	background-color: #ff8000;
 	transform: scale(1.1) 5s;
 	}
-}
+}/****************************************************************/
+
+
+/* Para tablets en orientación horizontal */
 
 /* Media para tablets entre 768px y 1023px */
-@media ( min-width : 768px) and (max-width: 1023px) {
+@media ( min-width : 768px) and (max-width: 1023px) and (orientation: landscape) {
 	body {
 		background: rgb(32, 240, 230);
 		font-family: 'Montserrat', sans-serif;
 		letter-spacing: 3px;
 		margin: 0;
-		display: flex;
 		flex-direction: column;
 		align-items: center;
 	}
@@ -146,25 +285,22 @@
 	/*** TITULO WEB ALUMNO *******************************/
 	.header {
 		position: relative;
-		width: 100%;
-		text-align: center;
-		margin-top: 30px;
-		background-color: antiquewhite;
-		padding: 20px;
+		width: 20%;
+		margin-top: 50px;
 	}
 	.header h1 {
-		margin: 0;
-		font-size: 30px;
+		margin-left: 12vw;
+		font-size: 15px;
 		letter-spacing: 5px;
-		width: 100%;
+		width: 20%;
 	}
 
 	/*** BOTON EXIT *******************************/
 	#exit {
 		width: 85px;
 		position: absolute;
-		right: 100px;
-		top: 2px;
+		right: 180px;
+		top: 12px;
 		background-color: transparent;
 		border: none;
 		display: flex;
@@ -185,8 +321,8 @@
 		width: 90px;
 		height: 150px;
 		position: absolute;
-		left: 100px;
-		top: -38px;
+		left: 50px;
+		top: -28px;
 		background-color: transparent;
 		border: none;
 		display: flex;
@@ -205,16 +341,18 @@
 		transform: scale(1.3);
 	}
 	h3 {
-		position: relative;
-		margin-top: 70px;
-		font-size: 24px;
+		position: absolute;
+		margin-top: 30vw;
+		font-size: 22px;
+				margin-right: 10vh;
+		
 	}
 	/*** MENU-FORMULARIO *******************************/
 	#form {
 		position: absolute;
 		width: 400px;
-		margin-top: 250px;
-		left: 310px;
+	top: 35vh;
+		left:18vw;
 		border-radius: 20px;
 		font-size: 24px;
 		font-weight: bold;
