--- a/css/estilos_alumno.css
+++ b/css/estilos_alumno.css
@@ -1,6 +1,5 @@
 @media (min-width: 1024px) {
 
-    /* Estilo general para el body */
     body {
         background: rgb(32, 240, 230);
         font-family: 'Montserrat', sans-serif;
@@ -10,10 +9,11 @@
         align-items: center;
     }
 
-    /* HEADER */
+    /********************* HEADER */
     .header {
         position: relative;
         width: 100%;
+        margin-top:30px;
         text-align: center;
         background-color: antiquewhite;
         padding: 20px;
@@ -25,7 +25,7 @@
         width: 100%;
     }
 
-    /* Botón de cerrar sesión */
+    /************* Botón de cerrar sesión */
     #exit {
         width: 110px;
         height: 100px;
@@ -48,7 +48,7 @@
         transform: scale(1.3);
     }
 
-    /* Botón de contacto */
+    /*************** Botón de contacto */
     #goContacto {
         width: 110px;
         height: 150px;
@@ -73,14 +73,14 @@
         transform: scale(1.3);
     }
 
-    /* Título */
+    /**************** Título */
     h3 {
         position: relative;
         margin-top: 70px;
         font-size: 30px;
     }
 
-    /* Formulario */
+    /* **************Formulario */
     #form {
         position: relative;
         width: 500px;
@@ -93,14 +93,12 @@
         align-items: center;
     }
 
-    /* Opciones del formulario */
+    /**************** Opciones del formulario */
     .option {
-        align-items: initial;
         margin-bottom: 20px;
         justify-items: center;
     }
 
-    /* Estilo de botones */
     .option button {
         align-items: center;
         background: none;
@@ -130,6 +128,19 @@
         color: #ffffff;
         background-color: #ff8000;
         transform: scale(1.1);
+        
+    }
+    
+    #lStats{
+    position:absolute;
+      margin-left: 180px;
+        margin-top: 60px;
+    }
+    
+    #lPlay{
+    position:absolute;
+      margin-left: 180px;
+        margin-top: 60px;
     }
 }
 /****************************************************************/
