--- a/css/estilos_contacto.css
+++ b/css/estilos_contacto.css
@@ -84,7 +84,7 @@
 		width: 500px;
 		height: 450PX;
 		margin-top: 220px;
-		left: 530px;
+		left: 700px;
 		border-radius: 20px;
 		font-size: 28px;
 		font-weight: bold;
@@ -338,4 +338,16 @@
 	input[type="reset"]:hover {
 		transform: scale(1.3);
 	}
+}
+	/*** pop up *******************************/
+
+#loadingMessage {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 20px;
+    border-radius: 5px;
 }
