--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,17 @@
 					EMPEZAMOS ¡</button>
 			</div>
 		</div>
+		
+	<!-- ADVERTENCIA-------------------------------------->
+		
+		<div class=" col-md-8 col-lg-6">
+			<div id="cuidado" class="text-center mb-4">
+				<img src="img/warning.png" class="img-fluid" alt="atención">
+				<h3 class="mt-3">ESTA ALICACIÓN SE VERÁ BIEN EN PANTALLAS DE ORDENADOR</h3>
+
+			</div>
+		</div>
+		
 
 	</div>
 
