--- a/templates/pagina3_presentacion.html
+++ b/templates/pagina3_presentacion.html
@@ -7,7 +7,12 @@
 <link
 	href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
 	rel="stylesheet">
-
+	<!--FAVICON  -->
+	
+<link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+<link rel="manifest" href="/static/site.webmanifest">
 
 
 <!-- BOOTSTRAP -->
