--- a/templates/pantalla1_M1.html
+++ b/templates/pantalla1_M1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos_P1_M1.css">
+    <link rel="stylesheet" href="/css/estilos_P1_M1.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet"> <!-- Enlace para importar la fuente Montserrat -->
 
     <title>PANTALLA 1_COFRE</title>
@@ -42,7 +42,7 @@
     <div id="audioCofre" onclick="audioPlay()">
         <img src="/img/volume-up_4178625.png" alt="Icono de audio">
         <audio id="audio"> 
-            <source src="/audios/collect-points-190037.mp3" type="audio/mp3">
+            <source src="/audios/failure.mp3" type="audio/mp3">
             Tu navegador no soporta el elemento de audio.
         </audio>
     </div>
